- Added XPM data constructor to wxImage.
- Added style parameter to wxBufferedDC to allow buffering just the client, or
  the whole virtual area.
- Restored ability to set a custom splitter sash size with SetSashSize.
- Fixed wxScrolledWindow sizer behaviour so that the virtual size
  isn't used to set the window size.
- Added wxTE_BESTWRAP (based on patch by Mart Raudsepp)

Unix:

- Fixed build on Linux/AMD64

wxMSW:

- Added "orient" parameter to wxMDIParentFrame::Tile()
- wxTextCtrl with wxTE_RICH2 style now uses RichEdit 4.1 if available
- fix handling Alt-key events in wxComboBox (reported by Joakim Roubert)
- wxWindow::Refresh() refreshes the window children as well

wxGTK:

- Improved wxSystemSettings::GetMetric() to work better with X11. (Mart Raudsepp)
- Corrected wxListBox selection handling.
- Corrected default button size handling for different themes.
- Corrected splitter sash size and look for different themes.
- Fixed keyboard input for dead-keys.
- Added support for wxTE_LINEWRAP (Mart Raudsepp)

wxMac:

- Added wxFRAME_EX_METAL, wxDIALOG_EX_METAL for metallic-look windows.

wxPalmOS:

- Native wxRadioBox implementation.

wxWinCE:

- Added wxNB_FLAT for flat-look notebooks on Windows CE.
- Titlebar OK button on PocketPC now sends command set by SetAffirmativeId.
  You can also override wxDialog::DoOK if you need more flexibility.
- Dialog size now takes into account SIP or menubar.
- Panels more naturally white on PocketPC.
- wxDIALOG_EX_CONTEXTHELP ignored on WinCE since it interferes
  with correct titlebar style.
- Frames have Ctrl+Q accelerator set automatically, as per the
  PocketPC guidelines
- Documented issues in manual under wxWinCE topic.
- Made (Un)RegisterHotKey WinCE-aware.
- Sends wxEVT_HIBERNATE event.
- Now fakes wxEVT_ACTIVATE_APP to be symmetrical with wxEVT_HIBERNATE.
- Added wxTE_CAPITALIZE for CAPEDIT controls.
- wxDialog::GetToolBar can be used if you need to add buttons
  to the dialog's toolbar.

2.5.4
-----

All:
